syntax = "proto3";

package Common.Proto.Space;

message EntityLeaveRequest {
    int32 entity_id = 1;
}

message EntityLeaveResponse {
    int32 entity_id = 1;
}